[package]
name = "figma_squircle"
version = "0.1.0"
authors = [ "cameronpcampbell" ]
edition = "2024"
description = "squircle svg path generator."
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/gpui-elements/figma-squircle-rust"

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }